<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/panti"
    tools:context="com.example.pc01.usersgerni.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:text="@string/b"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/tx"
        android:text="@string/mail"/>

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/val"
        android:singleLine="true"
        android:textColor="@color/blanco"
        android:textSize="15dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/tx"
        android:text="@string/pass"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:textStyle="italic"
        android:singleLine="true"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:hint="@string/min"
        android:password="true"
        android:id="@+id/password" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/ing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/blanco"
        android:text="@string/b1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:text="@string/gerrni"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/blanco"
        android:text="@string/b2"/>
</LinearLayout>
