<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/reg"
    tools:context="com.example.pc01.usersgerni.RegActivity"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/t"
        android:text="Join Gerni's!"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/t"
        android:text="@string/u1"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/usur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/blanco"
        android:singleLine="true"
        android:hint="(Use your imagination)" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/t"
        android:text="@string/mail"/>
    <EditText
        android:id="@+id/mailr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/blanco"
        android:singleLine="true"
        android:hint="(Valid e-mail)" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/t"
        android:text="@string/pass"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/passwordr"
        android:layout_width="match_parent"
        android:textStyle="italic"
        android:singleLine="true"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:hint="@string/min" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/reg"
        android:textColor="@color/blanco"
        android:textStyle="italic"
        android:text="@string/b2"
        android:textSize="25dp"
        android:id="@+id/regis"
        android:layout_weight="0.05" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
